--- a/frontend/src/Widgets/Alternatives.css
+++ b/frontend/src/Widgets/Alternatives.css
@@ -4,9 +4,7 @@
   display: flex;
   flex-direction: row;
   justify-content: start;
-  visibility: hidden;
   align-items: center;
-  opacity: 0;
   transition: opacity 0.1s ease;
 }
 .alternatives h2 {
